# mank

./: .gdbinit  .gitignore  .mankignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json
.mank/: config
.mank/ci/: pipeline.yml
.mank/objects/05/: 79d7b0f302a40b
.mank/objects/16/: fc082938d9642a
.mank/objects/1a/: a0f6781414c5d7
.mank/objects/1e/: 2dd1ff8970226b
.mank/objects/29/: 8af0bd0e54dc24
.mank/objects/31/: 6bd320678446cc
.mank/objects/35/: b3760f85e0080c
.mank/objects/38/: ee9c729063f416
.mank/objects/3b/: 0ad6b01bdace3a
.mank/objects/40/: 1437bc5d90daf7
.mank/objects/43/: 30b4d88b15f5b6
.mank/objects/45/: bc24880798a469
.mank/objects/46/: 6a9edfc575e2f2
.mank/objects/48/: 2bdf7fc155a059
.mank/objects/49/: 93430f931dd1aa
.mank/objects/51/: c385d2eaef61f5
.mank/objects/52/: 7f4d001e8436ac
.mank/objects/53/: ead87f73c5285e
.mank/objects/62/: 8d7cbb32fb0532
.mank/objects/68/: 65c59174e5b347
.mank/objects/69/: 56fbc2a7f1d7e6
include/: decorations.hpp  help.hpp  log.hpp  man.hpp  mank.hpp  objects.hpp  pager.hpp  version.hpp
man/: add.txt  branch.txt  checkout.txt  ci.txt  commit.txt  config.txt  dbranch.txt  diff.txt  help.txt  index.txt  init.txt  log.txt  merge.txt  pack.txt  release.txt  restore.txt  show.txt  stash.txt  status.txt  submodule.txt  switch.txt  tag.txt  unpack.txt  unstage.txt  version.txt
src/: add.cpp  checkout.cpp  ci.cpp  decorations.cpp  log.cpp  main.cpp  man.cpp  mank.cpp  objects.cpp  pack.cpp  pager.cpp  release.cpp  show.cpp  submodule.cpp  unpack.cpp
(+34 files in other folders)
